# Kinetica

./: Kinetica  Makefile  README.md  TheKineticianEngin.vcxproj  k.frag  meson.build  settings.ini
Media/entities/: 1.mtl  info.txt
Media/worldtiles/: 70.mtl  90.mtl  world_tiles_updated.txt
source/: main.cpp  projectsetup.h  projectshaders.h  tilenames.h
source/generic/: 3dfunctions.h  dirlist.h  generic.h  genericsettings.h  initvideo.h  input.h  loadbmp.h  loadms3d.h  loadobj.h  readinifiles.h
source/generic/AL/: sound.h
source/generic/dashboard/: dashbutton.h  dashcursor.h  dashmenu.h  dashonoff.h  dashsetup.h  dashtext.h  dashtime.h
source/generic/opengl/: loadtexture.h
source/generic/sdldraw/: drawline.h  drawpolygon.h  filtersurface.h  loadanddrawsurfaces.h  savesurface.h
source/include/: compat.h
source/projectspecific/: drawworld.h  entities.h  genentities.h  genworldgrid.h  minimap.h  play.h  tiles.h
source/sky/: skybox.h
